add tags '/' on swagger.yaml
